# specced

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT.md  README.md  SECURITY.md  SPEC.md  STORIES.md  pyproject.toml
agent/: README.md  graph.py  run.py  state.py
agent/nodes/: act.py  evaluate.py  plan.py  retrieve.py
cli/: README.md  main.py
data/: README.md  __init__.py  build.py  filter.py  generate.py  knowledge.py  notes.py  teacher.py
docs/: ARCHITECTURE.md  OPERATIONS.md  SPEC.md
docs/blog/: 01-reject-sampling.md  02-qlora-16gb.md  03-eval-fhir.md  04-self-refine.md  05-deid-recall.md  06-local-vs-claude.md  07-ood-generalization.md
evals/: README.md  __init__.py  benchmark.py  case.py  cli.py  compare.py  fhir_validate.py  mtsamples_bench.py  report.py  run_eval.py  score.py
evals/judges/: __init__.py  clinical.py  rubric.md
evals/reports/: benchmark_2026-06-15T05-49-04.json  case-00180_agent_2026-06-15T05-58-59.json  compare_2026-06-15T06-26-57.json  mtsamples_2026-06-15T15-11-45.json
rag/: README.md  index.py  retrieve.py
scripts/: demo.py  make_hero.py
serve/: Modelfile  README.md  client.py
specs/: case.schema.json
specs/examples/: cardio-visit.json  cardio-visit.pred.json
tests/: test_generate.py  test_score.py
train/: README.md  export_gguf.py  prompt.py  train_qlora.py
train/configs/: default.yaml
