[project]
name = "specced"
version = "0.1.0"
description = "Spec-driven, eval-first clinical-to-FHIR extraction toolkit (data + train + agent + evals)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.7",
    "jsonschema>=4.21",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# Eval harness: FHIR validation. (pydantic is already a core dep.)
evals = [
    "fhir.resources>=8.0.0",
    "eval_type_backport; python_version < '3.10'",
]
# Heavy ML deps kept separate so the data/agent side stays lightweight to install.
train = [
    "unsloth",
    "trl>=0.9",
    "transformers>=4.44",
    "datasets>=2.20",
    "accelerate>=0.33",
    "bitsandbytes>=0.43",
    "wandb>=0.17",
]
agent = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "lancedb>=0.13",
    "sentence-transformers>=3.0",
]

[project.scripts]
specced = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "data", "agent", "rag", "serve", "evals"]
